add a few more distance functions

--- a/CSG/tests/CMakeLists.txt
+++ b/CSG/tests/CMakeLists.txt
@@ -25,6 +25,7 @@ set(TEST_SOURCES
     intersect_node_cylinder_test.cc 
     CSGNodeScanTest.cc
     CSGSignedDistanceFieldTest.cc
+    distance_node_test.cc
 )
 
 foreach(SRC ${TEST_SOURCES})
