add CSG tree drawing with CSGDraw using SCanvas.hh and an inorder tree visit to paint onto canvas

--- a/CSG/tests/CMakeLists.txt
+++ b/CSG/tests/CMakeLists.txt
@@ -27,6 +27,8 @@ set(TEST_SOURCES
     CSGNodeScanTest.cc
     CSGSignedDistanceFieldTest.cc
     distance_node_test.cc
+
+    CSGGeometryTest.cc
 )
 
 foreach(SRC ${TEST_SOURCES})
