inner boundary spurious confirmed to arise for BoxFourBoxUnion but not BoxThreeBoxUnion, seems that need an extra LOOP step or smth for large numbers of constituents as the pairings in the tree are unrelated to the geometry

--- a/CSG/CMakeLists.txt
+++ b/CSG/CMakeLists.txt
@@ -103,7 +103,7 @@ add_library( ${name}  SHARED ${SOURCES} ${HEADERS} )
 
 target_compile_definitions( ${name} PUBLIC OPTICKS_CSG )
 
-# these DEBUG are exceedingly verbose : only use for single photons and do not leave like this 
+# these DEBUG flags are exceedingly verbose : only use for single photons and do not leave like this 
 #target_compile_definitions( ${name} PUBLIC DEBUG )
 #target_compile_definitions( ${name} PUBLIC DEBUG_RECORD )
 
