bring over the former ZSolid, now X4SolidTree, from j/PMTSim as extg4/X4SolidTree for dumping of G4VSolid CSG trees

--- a/CSG/CMakeLists.txt
+++ b/CSG/CMakeLists.txt
@@ -80,6 +80,8 @@ list(APPEND INTERSECT_HEADERS
     csg_tranche.h
     csg_error.h
     csg_postorder.h
+
+    f4_stack.h
 )
 
 list(APPEND CUDA_HEADERS
