--- a/extg4/tests/CMakeLists.txt
+++ b/extg4/tests/CMakeLists.txt
@@ -19,6 +19,7 @@ set(TEST_SOURCES
     X4EntityTest.cc
     X4SolidTest.cc
     X4SolidLoadTest.cc
+    X4SolidTreeDrawTest.cc
 
     X4MeshTest0.cc
 
