generalize NCSG to saving lists of nodes needed by NMultiUnion as well as the normal trees of nodes needed for booleans

--- a/npy/tests/CMakeLists.txt
+++ b/npy/tests/CMakeLists.txt
@@ -120,7 +120,7 @@ NStepTest.cc
 
 
 NMarchingCubesNPYTest.cc
-NCSGDataTest.cc
+NNodeCompleteTreeHeightTest.cc
 NCSGTest.cc
 NCSG2Test.cc
 NCSGLoadTest.cc
