debug succeeding to get BoxFourBoxContiguous to render cxr_geochain.sh using OptiX 5 on laptop, notice issue with t_min cutting showing miss inside : the algorithms use of inside branching from distance functions seems problematic for the proper t_min behaviour thats needed for CSG_CONTIGUOUS to work within csg trees

--- a/CSGOptiX/tests/CMakeLists.txt
+++ b/CSGOptiX/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SINGLE_SOURCES
     CSGOptiXVersionTest.cc
     CSGOptiXRenderTest.cc
     CSGOptiXSimulateTest.cc
+    CSGOptiXTest.cc 
 )
 
 foreach(SRC ${SINGLE_SOURCES})
