allow CSGMaker test shapes to be used just like GeoChain shapes, via placeholder transform, instance and meshname to standardise the CSGFoundry

--- a/CSG/tests/CMakeLists.txt
+++ b/CSG/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ set(TEST_SOURCES
     CSGScanTest.cc
     CUTest.cc
     CSGLogTest.cc
+    CSGMakerTest.cc
 
     intersect_leaf_phicut_test.cc 
     intersect_leaf_box3_test.cc 
