run level genstep SXYZ or photon SXYZW selection with in CSGGeometry, lower level but still GEOM flexible CSGQueryTest. get GEOCHAIN logging operational

--- a/CSG/tests/CMakeLists.txt
+++ b/CSG/tests/CMakeLists.txt
@@ -22,6 +22,7 @@ set(TEST_SOURCES
     CUTest.cc
     CSGLogTest.cc
     CSGMakerTest.cc
+    CSGQueryTest.cc
 
     intersect_leaf_phicut_test.cc 
     intersect_leaf_thetacut_test.cc
