avoid duplication in CSG_PHICUT CSG_THETACUT param preparation by moving down to SPhiCut SThetaCut statics for use from both NPY and CSG

--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -85,6 +85,9 @@ set(SOURCES
     SLabelCache.cc
 
     SEvent.cc
+    SThetaCut.cc 
+    SPhiCut.cc 
+
     SCenterExtentFrame.cc
     SCenterExtentGenstep.cc
 ) 
@@ -171,6 +174,10 @@ set(HEADERS
     iexpand.h 
 
     SEvent.hh
+    SThetaCut.hh
+    SPhiCut.hh
+
+
     SCenterExtentFrame.hh
     SCenterExtentGenstep.hh 
     SPresent.hh
