avoid some sphere pacmanpp artifacts with SMath::sin_pi SMath::cos_pi improving accuracy, still line of misses on the sharp phicut edge

--- a/CSGOptiX/CMakeLists.txt
+++ b/CSGOptiX/CMakeLists.txt
@@ -73,6 +73,7 @@ if(OpticksOptiX_VERSION GREATER_EQUAL 70000)
         SBT.cc 
     )
 else()
+   # TODO: note that have to manually touch .cu in order to pick up changed CSG headers in build, find way to fix this  
    list(APPEND CU_SOURCES OptiX6Test.cu  geo_OptiX6Test.cu )
    list(APPEND SOURCES  
         Six.cc 
