nnode clone needs to use the higher type for bbox

--- a/npy/tests/CMakeLists.txt
+++ b/npy/tests/CMakeLists.txt
@@ -58,6 +58,7 @@ NTorusTest.cc
 NHyperboloidTest.cc
 NCubicTest.cc
 NSphereTest.cc
+NMultiUnionTest.cc
 NPhiCutTest.cc
 NThetaCutTest.cc
 NZSphereTest.cc
