allowing tree nodes to be compound for CSG_CONTIGUOUS is going to be a bit complicated, as needs changes thru entire chain

--- a/extg4/tests/CMakeLists.txt
+++ b/extg4/tests/CMakeLists.txt
@@ -14,6 +14,7 @@ set(PMTSIM_TEST_SOURCES
 set(TEST_SOURCES
 
     X4SolidMakerTest.cc
+    X4SolidMultiUnionTest.cc 
 
     X4Test.cc
     X4EntityTest.cc
