rearrange to only collecting enters in intersect_node_contiguous allows the same resource expenditure to handle solids with more subs

--- a/CSG/CMakeLists.txt
+++ b/CSG/CMakeLists.txt
@@ -111,7 +111,7 @@ add_library( ${name}  SHARED ${SOURCES} ${HEADERS} )
 target_compile_definitions( ${name} PUBLIC OPTICKS_CSG )
 
 # these DEBUG flags are exceedingly verbose : only use for single photons and do not commit with them uncommented
-target_compile_definitions( ${name} PRIVATE DEBUG )
+#target_compile_definitions( ${name} PRIVATE DEBUG )
 #target_compile_definitions( ${name} PRIVATE DEBUG_RECORD )
 
 
