X4VolumeMaker for creation for test PV LV volumes for debugging and switch to using that with g4ok/G4OKVolumeTest.sh

--- a/extg4/CMakeLists.txt
+++ b/extg4/CMakeLists.txt
@@ -60,6 +60,7 @@ set(SOURCES
     X4geomdefs.cc
     X4Intersect.cc
     X4SolidMaker.cc
+    X4VolumeMaker.cc
 
     X4Named.cc
     X4NameOrder.cc
@@ -129,6 +130,7 @@ set(HEADERS
     X4geomdefs.hh
     X4Intersect.hh
     X4SolidMaker.hh
+    X4VolumeMaker.hh
 
 
     X4Named.hh
