OPTICKS_COMPUTE_CAPABILITY sensitivity for CSGOptiX

--- a/CSGOptiX/CMakeLists.txt
+++ b/CSGOptiX/CMakeLists.txt
@@ -33,7 +33,7 @@ include_directories(
 
 
 
-set(COMPUTE_CAPABILITY 30)
+set(COMPUTE_CAPABILITY $ENV{OPTICKS_COMPUTE_CAPABILITY})
 
 set(CUDA_NVCC_FLAGS)
 list(APPEND CUDA_NVCC_FLAGS "-Xcompiler -fPIC")
