--- a/CSG/CMakeLists.txt
+++ b/CSG/CMakeLists.txt
@@ -26,6 +26,7 @@ list(APPEND SOURCES
     CSGPrimSpec.cc
     CSGSolid.cc
     CSGFoundry.cc
+    CSGSelection.cc
     CSGMaker.cc
     CSGName.cc
     CSGGenstep.cc
@@ -52,6 +53,7 @@ list(APPEND CSG_HEADERS
 
 
     CSGFoundry.h
+    CSGSelection.h
     CSGMaker.h
     CSGName.h
     CSGGenstep.h
