--- a/CSG/tests/CMakeLists.txt
+++ b/CSG/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ set(TEST_SOURCES
     CSGLogTest.cc
     CSGMakerTest.cc
     CSGQueryTest.cc
+    CSGSelectionTest.cc
 
     intersect_leaf_phicut_test.cc 
     intersect_leaf_thetacut_test.cc
