--- a/thrustrap/CMakeLists.txt
+++ b/thrustrap/CMakeLists.txt
@@ -80,6 +80,7 @@ When it should be using::
 
 target_link_libraries( ${name} Opticks::OpticksCore Opticks::CUDARap)
 target_compile_definitions( ${name} PUBLIC OPTICKS_THRAP )
+#target_compile_definitions( ${name} PRIVATE WITH_NVTOOLS )
 target_include_directories( ${name} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> )
 
 if(ThrustRap_VERBOSE)
