start with CSGClone as easy to verify preparation for implementing dynamic Prim selection in CSGSelection

--- a/CSG/CMakeLists.txt
+++ b/CSG/CMakeLists.txt
@@ -27,6 +27,7 @@ list(APPEND SOURCES
     CSGSolid.cc
     CSGFoundry.cc
     CSGSelection.cc
+    CSGClone.cc
     CSGMaker.cc
     CSGName.cc
     CSGGenstep.cc
@@ -54,6 +55,7 @@ list(APPEND CSG_HEADERS
 
     CSGFoundry.h
     CSGSelection.h
+    CSGClone.h
     CSGMaker.h
     CSGName.h
     CSGGenstep.h
