preparing SSelector to pick shapes and compound solids to include in clone of geometry with selection applied

--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -74,6 +74,7 @@ set(SOURCES
     SAbbrev.cc
     SPack.cc
     SBit.cc
+    SBitSet.cc
     SEnabled.cc
     SRand.cc
 
@@ -152,6 +153,7 @@ set(HEADERS
     SAbbrev.hh
     SPack.hh
     SBit.hh
+    SBitSet.hh
     SEnabled.hh
     SRand.hh
 
