potential fix for ELV prim selection, needed to use setTransformComplement

--- a/CSG/tests/CMakeLists.txt
+++ b/CSG/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(OpticksCore REQUIRED CONFIG)
 
 set(TEST_SOURCES
     CSGNodeTest.cc
+    CSGNodeImpTest.cc
     CSGIntersectSolidTest.cc
     CSGPrimImpTest.cc
     CSGPrimSpecTest.cc
