migrate much of okc/OpticksFlags.hh functionality down to sysrap/OpticksPhoton.hh for wider access

--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -96,6 +96,8 @@ set(SOURCES
 
     SCenterExtentFrame.cc
     SCenterExtentGenstep.cc
+
+    OpticksPhoton.cc
 ) 
     
 
@@ -199,6 +201,7 @@ set(HEADERS
 
     OpticksGenstep.h
     OpticksPhoton.h
+    OpticksPhoton.hh
 )
 
 
