--- a/extg4/tests/CMakeLists.txt
+++ b/extg4/tests/CMakeLists.txt
@@ -63,6 +63,8 @@ set(TEST_SOURCES
     X4PhysicalConstantsTest.cc
 
     X4SurfaceTest.cc
+    X4SurfacePropertyTest.cc
+
     CLHEPVersionInteger.cc
 
     convertMultiUnionTest.cc
