--- a/qudarap/tests/CMakeLists.txt
+++ b/qudarap/tests/CMakeLists.txt
@@ -14,6 +14,7 @@ set(TEST_SOURCES
    QPolyTest.cc
    QSimTest.cc
    QBndTest.cc 
+   QPrdTest.cc 
    QOpticalTest.cc 
    QPropTest.cc 
    QSeedTest.cc 
