--- a/qudarap/CMakeLists.txt
+++ b/qudarap/CMakeLists.txt
@@ -6,11 +6,20 @@ include(OpticksBuildOptions NO_POLICY_SCOPE)
 
 set(FLAGS_VERBOSE ON)
 
+#find_package(SysRap REQUIRED CONFIG)
 find_package(OpticksCore REQUIRED CONFIG) 
-# currently needed for OpticksEvent OpticksGenstep enum 
+
+# OpticksCore currently needed for OpticksEvent OpticksGenstep enum 
+# used by tests/QSimWithEventTest.cc
 # are moving in direction of reducing this dependency 
 # down to Sysrap as the use of OpticksCore is minimal
 # and its useful for testing for qudarap to be usable with little dependency 
+
+set(LIBS
+#    Opticks::SysRap
+     Opticks::OpticksCore
+)
+
 
 set(OpticksCUDA_VERBOSE ON)
 find_package(OpticksCUDA REQUIRED MODULE)
@@ -118,9 +127,6 @@ SET(HEADERS
     QBuf.hh
 )
 
-set(LIBS
-    Opticks::OpticksCore
-)
 
 # OLD_WAY needed GGeo
 # Opticks::SysRap
