make distinction between cxs.sh RG_SIMTRACE and RG_SIMULATE clear by renaming CSGOptiXSimulateTest to CSGOptiXSimtraceTest

--- a/CSGOptiX/tests/CMakeLists.txt
+++ b/CSGOptiX/tests/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SINGLE_SOURCES
     CSGOptiXVersion.cc
     CSGOptiXVersionTest.cc
     CSGOptiXRenderTest.cc
-    CSGOptiXSimulateTest.cc
+    CSGOptiXSimtraceTest.cc
     CSGOptiXTest.cc 
 )
 
