--- a/CSGOptiX/tests/CMakeLists.txt
+++ b/CSGOptiX/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SINGLE_SOURCES
     CSGOptiXVersionTest.cc
     CSGOptiXRenderTest.cc
     CSGOptiXSimtraceTest.cc
+    CSGOptiXSimulateTest.cc
     CSGOptiXTest.cc 
 )
 
