--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -28,6 +28,8 @@ set(TEST_SOURCES
    SSortKVTest.cc
    SPairVecTest.cc
    SDigestTest.cc
+   NPDigestTest.cc
+   
    PLogTest.cc 
    PLOG_Test.cc 
    SYSRAP_LOG_Test.cc 
