rename array item digests to SDigestNP.hh for clarity of provenance

--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -28,7 +28,7 @@ set(TEST_SOURCES
    SSortKVTest.cc
    SPairVecTest.cc
    SDigestTest.cc
-   NPDigestTest.cc
+   SDigestNPTest.cc
    
    PLogTest.cc 
    PLOG_Test.cc 
