switch NP names to a vector of string for referencing convenience, eg for CSGName, avoid bndname duplicity in CSGFoundry, add CXRaindropTest.cc as QBnd::Add boundary addition is geometry specific

--- a/CSGOptiX/tests/CMakeLists.txt
+++ b/CSGOptiX/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SINGLE_SOURCES
     CSGOptiXRenderTest.cc
     CSGOptiXSimtraceTest.cc
     CSGOptiXSimulateTest.cc
+    CXRaindropTest.cc
     CSGOptiXTest.cc 
 )
 
