integrating torch into QSim for on device GENTORCH QSimTest, relocate basis types storch.h scurand.d down from QUDARap to SysRap for SEvent genstep creation

--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -179,8 +179,14 @@ set(HEADERS
     SBuf.hh
 
     scuda.h
+    scurand.h  
+    sutil.h 
     s_mock_curand.h
     squad.h
+
+    storch.h
+    storchtype.h
+    
     sflow.h
     sqat4.h
     saabb.h
