centralize graphics projection math into SGLM.hh with improved flexibility by turning SGLM.hh into header-only implementation, using this from examples/UseGeometryShader

--- a/examples/UseGeometryShader/CMakeLists.txt
+++ b/examples/UseGeometryShader/CMakeLists.txt
@@ -7,9 +7,11 @@ set(OpticksGLFW_ALT ON)
 set(OpticksGLFW_VERBOSE ON)
 
 #include_directories($ENV{OPTICKS_PREFIX}/include/SysRap)
+#string(REPLACE ":" ";" INCLUDE_LIST $ENV{HOME}/np)
+#include_directories(${INCLUDE_LIST})
 
-string(REPLACE ":" ";" INCLUDE_LIST $ENV{HOME}/np)
-include_directories(${INCLUDE_LIST})
+include_directories($ENV{OPTICKS_HOME}/sysrap)   ## just header-only structs not the full shebang  
+#include_directories($ENV{HOME}/np)
 
 
 find_package(GLM         REQUIRED MODULE)
