layout for scerenkov.h following pattern of storch.h for filling out from ocu/cerenkovstep.h

--- a/CSGOptiX/CMakeLists.txt
+++ b/CSGOptiX/CMakeLists.txt
@@ -4,7 +4,7 @@ project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
 find_package(CUDA REQUIRED)   
-find_package(OpticksCore REQUIRED)
+find_package(OpticksCore REQUIRED)  ## AIMING TO ELIMINATE : DO NOT ADD ANY FURTHER USAGE OF OKC 
 find_package(QUDARap REQUIRED)
 find_package(CSG REQUIRED)
 
